2009-07-04	Mike Massonnet
Drop size callback from status icon

	- panel-plugin/main-status-icon.c:
		Remove the callback size_changed from the status icon. It has
		a bug with the KDE notification area where the size is getting
		smaller and smaller until something like 2 pixels...

2009-07-04	Mike Massonnet
Update test program test_action.c

2009-07-04	Mike Massonnet
Add groups to ClipmanActions

	- panel-plugin/actions.c:
		New function clipman_actions_set_group to change a group of a
		given action identified by its human readable name.
		On action match check for the group (-1 means all the groups).
		Save/load the group to/from the xml file.
	- panel-plugin/collector.c:
		On default clipboard change, get a match from actions with
		group "manual".
	- panel-plugin/xfce4-clipman-settings.c,
	panel-plugin/settings-dialog.glade:
		Show the toggle button "only on manual copy".

2009-07-02	Mike Massonnet
Add a real good daemon

	- configure.ac.in, daemon/*:
		Add the clipboard manager daemon from gnome-settings-daemon.
		It makes a copy of all TARGETs and uses them to restore a
		clipboard before it is going empty.
		This directory builds a static library daemon/libdaemon.la.
	- panel-plugin/plugin.c:
		Check for an existing ownership on CLIPBOARD_MANAGER, and if
		none is found instantiate a daemon and start it.

2009-07-02	Mike Massonnet
Update autostart behavior

	- panel-plugin/main-status-icon.c:
		When installing the autostart file, don't ask the user and
		copy the file with the Hidden key set to false.
		When dropping clipman from the notification area set the
		autostart Hidden key to true.

2009-07-02	Mike Massonnet
Forgot to use plugin.h in main-panel-plugin.c

2009-07-01	Mike Massonnet
Split Clipman in two binaries, one for the panel and one for notification area

	- panel-plugin/plugin.[ch]:
		Contains common code for poping up the main menu, displaying
		the settings and about dialog.
	- panel-plugin/main-panel-plugin.c: