@@ -67,6 +67,16 @@ XDT_CHECK_PACKAGE([LIBXFCE4PANEL], [libxfce4panel-1.0], [4.4.0])
 XDT_CHECK_PACKAGE([XFCONF], [libxfconf-0], [4.6.0])
 XDT_CHECK_PACKAGE([GLADE], [libglade-2.0], [2.6.0])
 
+dnl ***************************
+dnl *** Check for libunique ***
+dnl ***************************
+XDT_CHECK_OPTIONAL_PACKAGE([UNIQUE], [unique-1.0], [1.0.0], unique, [Unique support])
+if test x"$UNIQUE_FOUND" = x"yes"; then
+	enable_unique=yes
+else
+	enable_unique=no
+fi
+
 dnl ******************************
 dnl *** Check for i18n support ***
 dnl ******************************
@@ -143,6 +153,7 @@ fi
 echo
 echo "Build Configuration:"
 echo
-echo "* Debug Support:    $enable_debug"
+echo "    * Debug Support:    $enable_debug"
+echo "    * Unique:           $enable_unique"
 echo
 
